--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
         <section class="gallery">
             <h2> US HAPPY TOGETHER </h2>
-            <img src="F:\DOWNLOADS\38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App\1.jpg" alt="Memory 1">
+            <img src="1.jpg" alt="Memory 1">
             <img src="F:\DOWNLOADS\38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App\4.jpg" alt="Memory 2">
             <img src="F:\DOWNLOADS\38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App\2.jpg" alt="Memory 3">
            <h2> LOVE YOU SO MUCH <h2>
@@ -34,4 +34,5 @@
         <p>LOVE YOU FOREVER, [JAANA]</p>
     </footer>
 </body>
+
 </html>
