--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <section class="gallery">
             <h2> US HAPPY TOGETHER </h2>
             <img src="1.jpg" alt="Memory 1">
-            <img src="F:\DOWNLOADS\38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App\4.jpg" alt="Memory 2">
-            <img src="F:\DOWNLOADS\38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App\2.jpg" alt="Memory 3">
+            <img src="4.jpg" alt="Memory 2">
+            <img src="2.jpg" alt="Memory 3">
            <h2> LOVE YOU SO MUCH <h2>
-            <img src="F:\DOWNLOADS\38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App\5.jpg" alt="Memory 4">
-            <img src="F:\DOWNLOADS\38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App\3.jpg" alt="Memory 5">
+            <img src="5.jpg" alt="Memory 4">
+            <img src="3.jpg" alt="Memory 5">
 
         </section>
         <section class="wish">
@@ -36,3 +36,4 @@
 </body>
 
 </html>
+
